# MaizeView

./: .gitattributes  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  catalog.html  components.json  package-lock.json  package.json  player.html  quad.html  svelte.config.js  tsconfig.json  vite.config.js
.cursor/rules/: capabilities.mdc  storage-and-git.mdc
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: README.md  decisions.md  e2e.md  plan.md  progress.md  release-build.md  release-notes-v0.3.0.md  release-notes-v0.3.1.md  release-notes-v0.3.2.md  setup.md
docs/e2e-reports/: disk4-probe.txt  usb-topology-baseline.txt  usb-topology-rearranged.txt
e2e/: .env.example  global-setup.ts  global-teardown.ts  playwright.config.ts
e2e/fixtures/: catalog.ts
e2e/helpers/: env.ts  nav.ts  screenshots.ts  seed.ts  tauri.ts
e2e/tests/: catalog.smoke.spec.ts  convert.spec.ts  full-smoke.spec.ts  search-filters.spec.ts
scripts/: e2e-app.ps1
src-tauri/: Cargo.toml  cargo-msvc.bat  run-node.bat  run-npx.bat  tauri.conf.json
src-tauri/capabilities/: default.json  player.json
src-tauri/examples/: regenerate_fingerprints.rs  regenerate_previews.rs
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20260705000001_initial_schema.sql  20260711180001_stashdb_identify_history.sql  20260712000001_scene_segments.sql  20260712120001_saved_filters.sql  20260716180001_stashdb_reject_ignore.sql  20260718000001_playlist_items_dedup_indexes.sql
src-tauri/src/: catalog_cleanup.rs  covers.rs  db.rs  filename_parse.rs  fingerprints.rs  fingerprints_job.rs  job_parallel.rs  lib.rs  main.rs  media_tools.rs  models.rs  path_meta.rs  paths.rs  phash_job.rs  previews.rs  previews_job.rs  title_search.rs  transcode_job.rs  transcode_tokens.rs
src-tauri/src/commands/: batch_identify.rs  duplicates.rs  embedded_meta.rs  fingerprints.rs  identify.rs  metadata.rs  mod.rs  path_meta.rs  player.rs  playlists.rs  previews.rs  quad.rs  saved_filters.rs  scan.rs  scan_paths.rs  scenes.rs  segments.rs  settings.rs  stash_import.rs  transcode.rs
src-tauri/src/scanner/: md5.rs  mod.rs  oshash.rs  phash.rs  probe.rs
src-tauri/src/stashdb/: mod.rs
src-tauri/tests/: hash_parity.rs  scanner_e2e.rs  transcode_e2e.rs
src/catalog/: App.svelte  main.ts
src/lib/: favorite.ts  scrubber-preview.ts  search.ts  shuffle.ts  theme.ts  utils.ts
src/player/: App.svelte
src/quad/: App.svelte  main.ts
src/styles/: app.css
tools/: bench_invert_search.py  capture-player-hwnd.py  check-paths.py  check-repo-hygiene.mjs  demo-record-4play.mjs  demo-record-library.mjs  demo-seed.mjs  donate-check.mjs  dump-quad-tree.py  open-single-player.mjs  privacy-box-check.mjs  quad-loadnext-check.mjs  quad-probe.mjs  quad-reparent-test.py  quad-size-check.mjs  screen-grab.py  update-check.mjs
tools/mpv-probe/: .gitignore  Cargo.toml  main.rs
(+20 files in other folders)
